[build-system]
requires = [
    "setuptools>=43.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "objz"
description = "objects shell"
version = "4"
authors = [
    {name = "Bart Thate", email = "rssbotd@gmail.com"},
]
readme = "README.rst"
license = {text="Public Domain"}
classifiers = [ 
    'Development Status :: 3 - Alpha',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]


[project.scripts]
"objz" = "objz.__main__:wrapped"


[project.urls]
"home" = "https://pypi.org/project/objz"
"bugs" = "https://github.com/rssbotd/objz/issues"
"source" = "https://github.com/rssbotd/objz"


[tool.setuptools]
packages = [
    'objz',
    'objz.modules'
]
zip-safe=true


[tool.setuptools.data-files]
"share/doc/objz" = [
    "README.rst"
]


[tool.setuptools.exclude-package-data]
"*" = [
       "env*",
       "html*",
       "test*"
      ]
